feat. llm서비스 일부 수정 및 추천 결과 저장을 위한 Recommedation 테이블 생성